<resources>
    <string name="app_name">Spectrum</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hint_login_name">Full Name</string>
    <string name="hint_login_mobile">Mobile Number</string>
    <string name="hint_login_email">Email</string>
    <string name="hint_login_otp">Enter OTP</string>
    <string name="otp_msg">An OTP has been sent to your mobile!</string>
    <string name="rules_msg">Kindly read these rules for question 1</string>
    <string name="online_quiz_dialog">Go to online quiz</string>
    <string name="notificationbase_url">https://xyz</string>
    <string name="head_members">Head Members</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="organizers">Organizers</string>
    <string name="your_data">You</string>
    <string name="single_events">Single participant</string>
    <string name="multiple_events">Multiple Participant</string>
    <string name="designers">Designers</string>
    <string name="developers">Developers</string>
    <string name="atendee">atendee</string>
    <string name="about_spectrum">(JUST TEST TEXT)Society of Electronics Engineers (SEE) organizes an annual fest by the name of Spectrum (formerly known by the name E-Sparx). "A Spectrum (plural spectra or spectrums) is a condition that is not limited to a specific set of values but can vary, without steps, across a continuum. "On a similar note, SEE believes that the students of 21st century are not bound by any limitations to their intellectual capabilities and creativity. What SEE intends to do, is to redefine the potential limits of students in Jharkhand by providing a platform through Spectrum. It is a 2 day fest wherein students from different colleges and departments undergo an intense experience of testing their knowledge, creativity and challenging their aptitude and reasoning abilities. The event also gives the students an opportunity to interact with the people in the field of electronics to understand the bigger picture between the academic courses and industrial requirements.</string>
    <string name="about_SEE">(JUST TEST TEXT)The events are designed to provide an opportunity to explore teamwork, perseverance, ingenuity, observation skills and technical acumen.\nMission\n>To produce quality Electronics engineers with excellent technical skills ,leadership, creativity and innovation.\n> Enable students to develop skills to solve complex technical problems of current times.\n> Also the society aims at promoting research in the emerging discipline for the benefit of state and the NATION ultimately.\n>Personality Development, Communication Skills, Group Discussion and Presentation skills\nwhich is most important for an engineering student</string>
    <string name="description">Description</string>
</resources>
